# matchmaking-system

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
docs/: portfolio_solution.md  system_design.md
notebooks/: 01_lichess_matchmaking_eda.ipynb  02_matchmaking_modeling_and_policy.ipynb
scripts/: download_data.py
src/: matchmaking.py
src/matchmaking_system/: __init__.py  data.py  elo.py  features.py  policies.py  simulation.py
tests/: test_matchmaking.py
