[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "matchmaking-system"
version = "0.1.0"
description = "Fair, retention-aware matchmaking system design for gaming AI."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.1",
    "pytest>=8.0",
    "scikit-learn>=1.4",
    "seaborn>=0.13",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
